--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<li>C++</li>
 	<li>Python</li>
 	<li>C#</li>
+	<li>Django</li>
 </ul>
 
 <img id="edgar" src = "images/edgar.png" alt="Edgar Santana">
