--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ I started teaching myself how to code around 7 years ago and I fell in love with
 	<ul>
 		<li><a href="#">Home</a></li>
 		<li><a href="portfolio.html">My Portfolio</a></li>
-		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="contact.html">Contact</a></li>
 	</ul>
 </nav>
 
