--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="#">My Portfolio</a></li>
-		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="contact.html">Contact</a></li>
 	</ul>
 </nav>
 
